-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
None
-
RHEL7.9 client.
-
3
-
9223372036854775807
While working on another unrelated patch sanity-hsm test 29c started to fail. The reason for this failure was llapi_hsm_user_request_alloc() allocates a struct hsm_user_request but never zeros the values. So the extent fields could have random values which where sent to the MDT and back to the copytool. If the extent field was larger then the size of the migrating file then the copytool would see this as a failure. The bug was hidden due to the linking flags which in the unrelated patch changed and exposed this problem.
- is related to
-
LU-9680 Improve the user land to kernel space interface for lustre
-
- Open
-